replication factor added as param

--- a/templates/hadoop/hdfs-site.xml.erb
+++ b/templates/hadoop/hdfs-site.xml.erb
@@ -41,4 +41,10 @@
       This is useful for decommissioning nodes.
     </description>
   </property>
+  
+  <property>
+    <name>dfs.replication</name>
+    <value><%= replication_factor %></value>
+  </property>
+  
 </configuration>
