--- a/templates/hbase/hbase-site.xml.erb
+++ b/templates/hbase/hbase-site.xml.erb
@@ -36,4 +36,8 @@
     <value><%= @zookeeper_master %></value>
 </property>
 <% end -%>
+<property>
+    <name>zookeeper.session.timeout</name>
+    <value>300000</value>
+</property>
 </configuration>
