--- a/templates/hbase/hbase-env.sh.erb
+++ b/templates/hbase/hbase-env.sh.erb
@@ -38,7 +38,7 @@ export HBASE_HEAPSIZE=<%= @hbase_heap_size_mb %>
 # Below are what we set by default.  May only work with SUN JVM.
 # For more on why as well as other possible settings,
 # see http://wiki.apache.org/hadoop/PerformanceTuning
-export HBASE_OPTS="-XX:+UseConcMarkSweepGC"
+export HBASE_OPTS="-XX:+UseConcMarkSweepGC -Xmx4G"
 
 # Uncomment below to enable java garbage collection logging for the server-side processes
 # this enables basic gc logging for the server processes to the .out file
